@@ -407,7 +407,7 @@ train-power=electricity
 map-generator-working-title=Map generator
 map-generator-working-label=Generating resources, please wait...
 map-generator-node-count=[font=default-bold]__1__[/font] __plural_for_parameter_1_{1=node|rest=nodes}__ to process
-trash-slot-tooltip=[font=default-semibold]Trash slot[/font]\n[color=red]Items placed here will be immediately destroyed.[/color]\n[font=default-semibold][color=#80cef0]Right-click[/color][/font]: Trash 1
+trash-slot-tooltip=[font=default-semibold]Trash slot[/font]\n[color=red]Items placed here will be immediately destroyed.[/color]\n[font=default-semibold][color=#80cef0]Right-click[/color][/font]: Trash 1\n[font=default-semibold][color=#80cef0]Shift-click[/color][/font]: Trash equipment
 sort-storage=Sort
 hub-milestone-tracking-caption=Current Milestone
 hub-milestone-tracking-none-selected=No Milestone selected in the HUB.
@@ -972,6 +972,7 @@ mam-research=M.A.M. research
 trash-slot-building=Buildings cannot be trashed. They should be dismantled.
 trash-slot-hub-parts=[img=item.__1__] [color=#2cd23f]__2__[/color] cannot be trashed.
 trash-slot-nuclear-waste=[img=item.__1__] [color=#2cd23f]__2__[/color] cannot be trashed. FICSIT does not waste.
+trash-slot-equipment=Hold Shift to trash equipment.
 milestone-already-researched=[color=red]Milestone [img=item.__1__] __2__ has already been completed.[/color]
 milestone-reached=[font=ada-console-heading][color=#80cef0]Milestone reached: [img=item.__1__] __2__[/color][/font]
 milestone-effect-unlock-building=\n[font=ada-console-semibold][color=#ffe6c0]New building:[/color][/font] [img=recipe.__1__] [color=#2cd23f]__2__[/color]
